# rust-p2p

./: .gitignore  icon.png.import  main.gd  main.gd.old  project.godot  rust.gdextension
rust-logic/almeta-p2p/: Cargo.toml
rust-logic/almeta-p2p/src/: alt_scoring.rs  aux.rs  babel.rs  command.rs  direct_packet.rs  ice.rs  lib.rs  macros.rs  node.rs  p2p_manet.rs  packet.rs  peer_id.rs  peerigee.rs  perigee.rs  routing_entry.rs  scoring.rs  user_json.rs
rust-logic/almeta-p2p/src/peerigee/: scoring.rs
rust-logic/p2p/: Cargo.toml
rust-logic/p2p/src/: main.rs  p2p.rs
rust-logic/p2p/src/p2p/: command.rs  new_packet.rs  node.rs  packet.rs
rust-logic/rust-logic/: Cargo.toml
rust-logic/rust-logic/src/: lib.rs  rust_logic.rs
rust-logic/src/p2p/: ice.rs
rust-logic/testapp/: Cargo.toml
rust-logic/testapp/src/: main.rs  p2p.rs
scenes/: main.gd  main.tscn  rust.gd  rust.tscn  user_offer.gd  user_offer.tscn
scripts/: answer_panel.gd  connection_input.gd  logy.gd  main.gd  offer_panel.gd  user_offer.gd
scripts/p2p/: debug.gd  incoming.gd  link.gd  network.gd  outgoing.gd  packets.txt  rustnetwork.gd
