[package]
name = "almeta-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"

[features]
default = []#["error", "debug", "tracenode"]
debug = []
error = []
trace = []
tracenode = []
