[package]
name = "almeta-p2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thats_so_random = { version = "0.1.2", git = "https://github.com/DrAlta/thats_so_random.rs.git"}
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = "1.0.108"
qol = { git = "https://github.com/DrAlta/rust_quality_of_life.git"}
md5 = "0.7.0"

[features]
default = ["error", "debug", "tracenode"]
debug = []
error = []
trace = []
tracenode = []
